--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#dadada</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#B82409</color>
+    <color name="colorPrimaryDark">#A82007</color>
+    <color name="colorAccent">#4CAF50</color>
 
     <color name="colorPrimaryLight">#C8E6C9</color>
     <color name="colorPrimaryText">#212121</color>
