--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.activity.OtpActivity">
 
     <LinearLayout
@@ -13,6 +14,11 @@
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:padding="10dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="150sp"
+            android:src="@drawable/logo"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -24,7 +30,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <com.sabzishoppidriverapp.utils.pinview.Pinview
+        <com.sabziwaladriverapp.utils.pinview.Pinview
             android:id="@+id/pinview1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
