--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,17 +8,16 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/progressBar"
         android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="20dp">
 
-        <TextView
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150sp"
             android:gravity="center"
-            android:text="Sabzi-Shoppi"
-            android:textColor="@color/black"
-            android:textSize="42sp" />
+            android:src="@drawable/logo" />
 
         <TextView
             android:layout_width="match_parent"
@@ -34,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
