--- a/app/src/main/res/layout/dialog_paid.xml
+++ b/app/src/main/res/layout/dialog_paid.xml
@@ -1,43 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="250dp"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="16dp">
+    app:cardElevation="6sp"
+    app:cardCornerRadius="6sp">
 
-    <EditText
-        android:id="@+id/edtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:inputType="text"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/edtPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:focusable="false"
-        android:inputType="number"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:textSize="16sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:padding="16sp">
 
-    <TextView
-        android:id="@+id/txtOk"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="right"
-        android:layout_margin="16dp"
-        android:background="@drawable/bg_layout1"
-        android:gravity="center"
-        android:text="OK"
-        android:textColor="@color/black"
-        android:textSize="16sp" />
-</LinearLayout>
+            <TextView
+                android:id="@+id/edtName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:inputType="text"
+                android:padding="10dp"
+                android:text="Rupesh"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/edtPhone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:focusable="false"
+                android:inputType="number"
+                android:padding="10dp"
+                android:text="123435356"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtOk"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="right"
+                android:layout_margin="16dp"
+                android:background="@drawable/bg_layout1"
+                android:gravity="center"
+                android:text="OK"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+        </LinearLayout>
+</android.support.v7.widget.CardView>
